# belief-geometry

./: mess3_belief_geometry_version1.py  mess3_dataset.py  mess3_hmm_version1.py  pyproject.toml
mechanism_2L_simple/: ablation_results.json
mechanism_3L_rich/: ablation_results.json
mechanism_4comp/: ablation_results.json
mechanism_checkpoints_2L_simple_reg/: ablation_over_training.json  ablation_results.json
scripts/: analyze_convergence.py  analyze_convergence_rate.py  analyze_fractal.py  analyze_geometry.py  analyze_mechanism.py  compare_2x2.py  experiment_diagram.py  inspect_snapshots.py  make_geometry_gif.py  run_2x2.py  run_4comp.py  run_regularized.py  train.py
src/: belief_geometry.py  dataset.py  hmm.py  math_utils.py  transformer.py
