[project]
name = "simplex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-ray-launcher>=1.2.1",
    "nbformat>=5.10.4",
    "pydantic >= 2.12.0",
    "transformer-lens==2.15.4",
    "transformers==4.57.3",
    "matplotlib>=3.0.0",
    "plotly>=5.0.0",
    "Pillow>=9.0.0",
    "scipy>=1.10.0",
    "torch>=2.0.0",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.0",
    "tqdm>=4.0.0",
]